--- a/index.html
+++ b/index.html
@@ -1,65 +1,40 @@
-html, body {
-  height: 75%;
-  width: 75%;
-  font-family: Helvetica;
-  background-color: #7DE5ED;
-}
-*{
-  margin: 0;
-  padding: 0;
-  text-decoration: none;
-  list-style: none;
-  box-sizing: border-box;
+<!DOCTYPE html>
+<html>
 
-}
+<head>
+  <title> Art Chamber </title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width"> 
+  <link href="style.css" rel="stylesheet" type="text/css" />
+</head>
+  
+<body>
+  <div id="container">
+    <div id="logo_container">
+      <div id="website_name">
+         <img 
+        alt="Art Chamber Logo"
+        title= "Art Chamber Logo"
+        src="images\circle.png"
+        width= "80" height= "80"
+        style= "float:left"
+        style= "padding: 5px";
+        />
+        <h1>
+          <span>Art</span>Chamber
+        </h1> 
+      </div>
+    </div>
+    <ul>
+      <li><a>Something</a></li>
+      <li><a>Contacts</a></li>
+      <li><a>About</a></li>
+      <li><a>Home</a></li>
+    </ul>
+  </div>
 
-#container{
-  width: 100%;
-  height: 80px;
-  display: block;
-  background-color: #98c1d9;
-  position: fixed;
-  top: 0;
-}
-
-#logo_container{
-  width: 300px;
-  height: 100%;
-  display: block;
-  background-color: #219ebc;
-}
-
-#website_name{
-  height:100%;
-  display: table;
-  float: left;
-  background-color: #219ebc;
-}
-#website_name h1{
-  color: #003049;
-  height: 100%;
-  display: table-cell;
-  vertical-align: middle;
-  font-weight: 100;
-}
-#website_name h1 span{
-  font-weight: 900;
-}
-
-#container li{
-  float: right;
-  margin: 0px 40px;
-  position: relative;
-  top: -50px;
-  right: 60px
-}
-
-
-#Home_description{
-  width: 100%;
-  height: 20px;
-  display: block;
-  background-color: #98c1d9;
-  position: fixed;
-  bottom: 0;
-}
+  <div id="Home_description">
+    
+  </div>
+</body>
+</html>
