--- a/index.html
+++ b/index.html
@@ -13,12 +13,11 @@
     <div id="logo_container">
       <div id="website_name">
          <img 
-        alt="Art Chamber Logo"
-        title= "Art Chamber Logo"
-        src="images\circle.png"
-        width= "80" height= "80"
-        style= "float:left"
-        style= "padding: 5px";
+          title="Art Chamber Logo" 
+          src="\images\Art Chamber Logo.png" 
+          width="70" 
+          height="70"
+          style="float:left; border-radius: 50%; padding: 0px; top:10px"
         />
         <h1>
           <span>Art</span>Chamber
@@ -26,15 +25,33 @@
       </div>
     </div>
     <ul>
-      <li><a>Something</a></li>
-      <li><a>Contacts</a></li>
-      <li><a>About</a></li>
-      <li><a>Home</a></li>
+      <li><a href="webpages/Resources.html">Resources</a></li>
+      <li><a href="webpages/Contacts.html">Contacts</a></li>
+      <li><a href="webpages/About.html">About</a></li>
+      <li><a href="webpages/Home.html">Home</a></li>
     </ul>
   </div>
 
   <div id="Home_description">
-    
+    <span style= "color: #1F2D33">Welcome!</span></br></br>
+    <p>
+    Art Chamber! Art Chamber is a website for those looking to expand their knowlegde about certain art types and maybe even start their own art journey. </br></br>We focus on visual arts and we have compiled a few topics and materials you can use in here! Have fun and good luck on your art journey!
+    </p>
   </div>
+
+  <div id="Choice_Box">
+    <div id="Question" style= "text-align:center; color: #211C1C">
+      What are you currrently interested in?
+    </div> 
+    <div id="Choice1">
+      <a href="webpages/TraditionalArt.html" style= "text-align:center; color: #211C1C">Traditional Art</a>
+    </div>
+    <div id="Choice2">
+      <a href="webpages/DigitalArt.html"style= "text-align:center; color: #211C1C">Digital <br> Art</a>
+    </div>
+  </div>
+  <div id="Footer">
+  </div>
+  
 </body>
 </html>
